--- a/my-app/src/Home_pageCSS/Products.css
+++ b/my-app/src/Home_pageCSS/Products.css
@@ -7,24 +7,22 @@
     padding-top: 5px;
     max-width: 300px;
     color: black;
+
 }
 .container_title{
     background-color: white;
 }
 
 .card{
-    background-color: white;
-    border-radius: 10px;
-    padding: 1em;
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 3);
+    border-radius: 3px;
     text-align: center;
-    font-family: 'Poppins';
-    transition: 0.5s;
-    animation-timing-function: ease-in-out;
-    animation-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition: all 0.3s linear;
 }
 .container_title > .card:hover{
     transform: scale(1px);
-    box-shadow: 2px 2px 6px 2   px;
+    box-shadow: 2px 2px 6px 2px;
     cursor: pointer;
 }
 
@@ -58,6 +56,7 @@ h5{
     font-weight: bold;
     text-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
     transition: all 0.3s linear;
+    margin-bottom: 5%;
 }
 
 .btbuy:hover{
@@ -83,3 +82,6 @@ h5{
     }
 }
 
+.container_title a{
+    text-decoration: none;
+}
